[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/Levels/Level1/Level_1.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Tilemaps/IceTilesDemo.tres" type="TileSet" id=2]
[ext_resource path="res://Scenes/Player/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://icon.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Texture/Label.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Projectiles/IceSpear.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29.3519, 29.0057 )

[node name="Level_1" type="Node2D"]
script = ExtResource( 1 )

[node name="Tilemaps" type="Node2D" parent="."]

[node name="IceTiles" type="TileMap" parent="Tilemaps"]
scale = Vector2( 4, 4 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 8, 8 )
format = 1
tile_data = PoolIntArray( -131066, 1073741843, 0, -131065, 1073741847, 0, -131064, 1073741848, 0, -65530, 42, 0, 6, 10, 0, 65542, 15, 0, 131078, 10, 0, 196614, 10, 0, 262150, 15, 0, 327686, 10, 0, 393222, 10, 0, 458758, 15, 0, 458768, 536870936, 0, 458769, 536870935, 0, 524294, 10, 0, 524302, 536870936, 0, 524303, 536870935, 0, 524304, 536870912, 0, 524305, 536870914, 0, 589830, 16, 0, 589831, 0, 0, 589832, 1, 0, 589833, 1, 0, 589834, 1, 0, 589835, 1, 0, 589836, 1, 0, 589837, 1, 0, 589838, 1, 0, 589839, 1, 0, 589840, 1, 0, 589841, 1, 0, 589842, 1, 0, 589843, 1, 0, 589844, 1, 0, 589845, 1, 0, 589846, 1, 0, 589847, 1, 0, 589848, 1, 0, 589849, 1, 0, 589850, 1, 0, 589851, 1, 0, 589852, 1, 0, 589853, 1, 0, 589854, 1, 0, 589855, 1, 0, 589856, 1, 0, 589857, 1, 0, 589858, 1, 0, 589859, 1, 0, 589860, 1, 0, 589861, 1, 0, 589862, 1, 0, 589863, 1, 0 )

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 350.948, 107.105 )
z_index = 1

[node name="SceneChangeArea" type="Area2D" parent="."]
position = Vector2( 2638.91, -242.696 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="SceneChangeArea"]
shape = SubResource( 1 )

[node name="icon" type="Sprite" parent="SceneChangeArea"]
position = Vector2( 0.916504, 1.20006 )
texture = ExtResource( 4 )

[node name="Node2D" type="Node2D" parent="."]
position = Vector2( 272.794, -90.4838 )

[node name="TextureRect" type="TextureRect" parent="Node2D"]
margin_left = -446.881
margin_top = -13.395
margin_right = -233.881
margin_bottom = 199.605
texture = ExtResource( 5 )
stretch_mode = 5

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="IceSpear" parent="." instance=ExtResource( 6 )]
position = Vector2( 1081.28, 49.0804 )
[connection signal="body_entered" from="SceneChangeArea" to="Player" method="_on_SceneChangeArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
